@@ -379,7 +379,12 @@
     <chmod perm="ugo+x" type="file" parallel="false">
       <fileset dir="${target.bin.dir}"/>
     </chmod>
+
+    <!-- create symlinks for libthrift.jar and libfb303.jar for backward compatibility -->
+    <symlink overwrite="true" link="${target.lib.dir}/libthrift.jar" resource="thrift-${thrift.version}.jar"/>
+    <symlink overwrite="true" link="${target.lib.dir}/libfb303.jar" resource="thrift-fb303-${thrift-fb303.version}.jar"/>
   </target>
+
 
   <!-- ====================================================== -->
   <!-- Generate files for eclipse.                            -->
